--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
+	font-size: 25px;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -56,9 +56,9 @@ table {
 @font-face {
   font-family: "lambo";
   src: url("font/lambo.ttf")format("truetype");
+  font-weight: bold;
 }
 
 p{
     font-family: "lambo";
-    font-size:50px;
 }
